package undertale.UI.state;

/**
 * Begin menu state - initial state before main menu
 */
public class BeginMenuState extends AbstractMenuState {
    
    @Override
    public MenuStateType getStateType() {
        return MenuStateType.BEGIN;
    }
}
